@@ -24,7 +24,7 @@ class TestMariaDBSGBD {
     private static Entity<PersonNotNull> personNotNullEntity;
 
     @BeforeAll
-    public static void init() throws EntityException, NoSuchMethodException, IllegalAccessException {
+    static void init() throws EntityException, NoSuchMethodException, IllegalAccessException {
         mariaDBSGBD = new MariaDBSGBD();
         personEntity = new Entity<>(Person.class);
         personLinkEntity = new Entity<>(PersonLink.class);
@@ -49,7 +49,7 @@ class TestMariaDBSGBD {
     @Test
     void testSelectLike() {
         String tableName = personEntity.tableName();
-        EntityDataDTO<Person> entityDataDTO = personEntity.getEntityDataDTOList().get(0);
+        EntityDataDTO<Person> entityDataDTO = personEntity.getEntityDataDTOList().getFirst();
 
         String expected = "SELECT * FROM eternia_person WHERE firstName LIKE ?;";
         String result = mariaDBSGBD.selectLike(tableName, entityDataDTO);
@@ -61,7 +61,7 @@ class TestMariaDBSGBD {
     void testSelectByQuery() {
         String tableName = personEntity.tableName();
         List<EntityDataDTO<?>> entityDataDTOs = new ArrayList<>();
-        EntityDataDTO<Person> entityDataDTO = personEntity.getEntityDataDTOList().get(0);
+        EntityDataDTO<Person> entityDataDTO = personEntity.getEntityDataDTOList().getFirst();
         entityDataDTOs.add(entityDataDTO);
 
         String expected = "SELECT * FROM eternia_person WHERE firstName = ?;";
@@ -131,7 +131,7 @@ class TestMariaDBSGBD {
     @Test
     void testBuildReferenceColumn() {
         String expected = "FOREIGN KEY (firstPersonId) REFERENCES eternia_person (id) ON DELETE CASCADE";
-        String result = mariaDBSGBD.buildReferenceColumn(personLinkEntity.getReferenceColumns().get(0));
+        String result = mariaDBSGBD.buildReferenceColumn(personLinkEntity.getReferenceColumns().getFirst());
 
         Assertions.assertEquals(expected, result);
     }
@@ -217,7 +217,7 @@ class TestMariaDBSGBD {
 
     @Test
     void testBuildDataColumn() {
-        EntityDataDTO<Person> dataDTO = personEntity.getEntityDataDTOList().get(0);
+        EntityDataDTO<Person> dataDTO = personEntity.getEntityDataDTOList().getFirst();
 
         String expected = "firstName VARCHAR(256)";
         String result = mariaDBSGBD.buildDataColumn(dataDTO);
@@ -227,7 +227,7 @@ class TestMariaDBSGBD {
 
     @Test
     void testBuildDataColumnNotNull() {
-        EntityDataDTO<PersonNotNull> dataDTO = personNotNullEntity.getEntityDataDTOList().get(0);
+        EntityDataDTO<PersonNotNull> dataDTO = personNotNullEntity.getEntityDataDTOList().getFirst();
 
         String expected = "firstName VARCHAR(256) NOT NULL";
         String result = mariaDBSGBD.buildDataColumn(dataDTO);
